fix image cropping in main page and add scrolling to top

--- a/app/globals.css
+++ b/app/globals.css
@@ -260,7 +260,7 @@
   }
 
   body {
-    overflow-x: hidden;
+    overflow-x: clip;
   }
 
   body {
